# splitEX

./: .gitignore  README.md  app.js  index.html
.github/workflows/: ci.yml
contracts/splitEX_escrow/: Cargo.toml
contracts/splitEX_escrow/src/: lib.rs
contracts/splitEX_escrow/test_snapshots/test/: test_contract_initialization.1.json  test_create_split_basic.1.json  test_create_split_three_way.1.json  test_deposit_share.1.json  test_get_participant_share.1.json  test_get_user_splits.1.json  test_multiple_splits_sequential_ids.1.json  test_non_positive_amount.1.json  test_partial_deposit.1.json  test_settle_split.1.json
contracts/splitEX_escrow/tests/: integration_test.rs
