[package]
name = "splitex-escrow"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[[test]]
name = "integration"
path = "tests/integration_test.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
strip = true
